--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -15,13 +15,13 @@ body{
     height:50px;
     background:#FFFFFF;
     margin:0 auto;
-    position:relative;
+    /*position:relative;*/
     font-size:12px;
     position:fixed;
     left:50%;
     top:0px;
     margin-left:-750px;
-
+    z-index: 100;
 }
 /*1.1 左侧logo*/
 #top .topleft{
@@ -45,47 +45,8 @@ body{
 /*1.2 搜索框*/
 #top .topcenter{
     float: left;
-    margin-left: 20px;
+    margin-left: 350px;
     position:relative;
-}
-.topcenter input{
-    margin-top:5px;
-    height:36px;
-    width:400px;
-    border-radius:18px;
-    border:1px solid #04b5eb;
-    padding-left:10px;
-    font-size:14px;
-    border-right:none;
-}
-.topcenter input:focus{
-    outline:none;
-}
-.topcenter button{
-    position:absolute;
-    height:40px;
-    width:50px;
-    right:320px;
-    top:5px;
-    box-sizing:border-box;
-    z-index: 10;
-    border: 1px solid black;
-    border-right:none;
-    padding:0 0 0 20px;
-    font-size: 14px;
-    font-weight: bold;
-    outline: none;
-}
-.topcenter .circle{
-    position:absolute;
-    height:40px;
-    width:50px;
-    right:298px;
-    top:5px;
-    box-sizing:border-box;
-    background:#DDDDDD;
-    border-radius:20px;
-    border: 1px solid black;
 }
 .topcenter .tags{
     height:50px;
@@ -125,7 +86,7 @@ body{
 }
 #top .tags ol{
     margin-top:-10px;
-    margin-left:40px;
+    margin-left:20px;
 }
 #top .tags .last_a{
     margin-left: 80px;
@@ -133,7 +94,7 @@ body{
 
 #top .tags li{
     height:25px;
-    width:120px;
+    width:90px;
     margin-top: 2px;
     font-size:14px;
     line-height: 25px;
