--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,56 +6,52 @@ body,h1,h2,h3,h4,h5,h6,p,ul,ol,a{
     list-style: none;
 }
 body{
-	color: #2b2b2b;
-	font-size: 20px;
+    background:#e9c9bf;
+    padding:0px;
 }
-/*顶部标题*/
+/*1 头部样式*/
 #top{
-    width: 1320px;
-    height: 50px;
-    margin-left: -660px;
-    position: fixed;
-    top: 0;
-    left: 50%;
+    width:1500px;
+    height:50px;
+    background:#FFFFFF;
+    margin:0 auto;
+    /*position:relative;*/
+    font-size:12px;
+    position:fixed;
+    left:50%;
+    top:0px;
+    margin-left:-750px;
     z-index: 100;
-    background: #8bc34a;
 }
 /*1.1 左侧logo*/
 #top .topleft{
-    width:150px;
+    width:500px;
     float:left;
-    /*margin-left:40px;*/
-    position:relative;
-}
-.topleft img{
-    height:30px;
     margin-left:40px;
 }
+.topleft img{
+    float: left;
+    height:50px;
+    margin-left:0px;
+    margin-right:30px;
+}
 .topleft p{
-    font-size:18px;
+    float:left;
+    margin:0 50px;
+    font-size:32px;
     color:mediumpurple;
     font-weight: bold;
-    position:absolute;
-    bottom:-18px;
-    margin-left: 20px;
-}
-#index{
-    float: left;
-    font: bold 24px yahei;
-    color: #000;
-    margin-top: 12px;
-    margin-left: 50px;
 }
 /*1.2 搜索框*/
 #top .topcenter{
     float: left;
-    margin-left: 245px;
+    margin-left: 20px;
     position:relative;
 }
 .topcenter input{
     margin-top:5px;
     height:36px;
-    width:300px;
+    width:400px;
     border-radius:18px;
     border:1px solid #04b5eb;
     padding-left:10px;
@@ -69,29 +65,85 @@ body{
     position:absolute;
     height:40px;
     width:50px;
-    right:20px;
+    right:320px;
     top:5px;
     box-sizing:border-box;
     z-index: 10;
-    border: 1px solid #04b5eb;
+    border: 1px solid black;
     border-right:none;
     padding:0 0 0 20px;
     font-size: 14px;
     font-weight: bold;
     outline: none;
-    border-left: 1px solid #DDDDDD;
 }
-.topcenter div{
+.topcenter .circle{
     position:absolute;
     height:40px;
     width:50px;
-    right:-2px;
+    right:298px;
     top:5px;
     box-sizing:border-box;
     background:#DDDDDD;
     border-radius:20px;
-    border: 1px solid #04b5eb;
+    border: 1px solid black;
 }
+.topcenter .tags{
+    height:50px;
+    width:300px;
+    line-height: 50px;
+    text-align: center;
+    text-decoration: none;
+    float: right;
+    padding-left:20px;
+    position:relative;
+}
+.topcenter .tags>a,.topcenter .tags>ul>a{
+    font-size: 18px;
+
+    color:-webkit-link;
+    float: left;
+}
+.topcenter .tags>a{
+    margin: 0 35px;
+}
+.type .type_list{
+    float: right;
+    position:absolute;
+    top:35px;
+    right:55px;
+    display:none;
+    background: #F3D5C4;
+}
+#top .tags ul{
+    position: absolute;
+    top:0px;
+    left:72px;
+    margin-left:20px;
+}
+#top .tags ol{
+    margin-top:-10px;
+    margin-left:20px;
+}
+#top .tags .last_a{
+    margin-left: 80px;
+}
+
+#top .tags li{
+    height:25px;
+    width:90px;
+    margin-top: 2px;
+    font-size:14px;
+    line-height: 25px;
+    border: 1px dotted grey;
+    background:greenyellow;
+}
+#top .tags ul ol{
+    display:none;
+}
+#top .tags ul:hover ol{
+    display: inline-block;
+}
+
 /*1.3 下拉菜单*/
 #top ul{
     float:right;
@@ -106,6 +158,8 @@ body{
 #top .pic img{
     width:30px;
     height:30px;
+    display: inline-block;
+    /*visibility: visible;*/
 }
 .pic .list{
     margin-left:-60px;
@@ -119,9 +173,6 @@ body{
     margin-top:3px;
     font-size:14px;
     /*display: none;*/
-}
-.list>li:hover{
-    background: #8ce141;
 }
 .pic:hover ol{
     display: inline-block;
@@ -138,7 +189,7 @@ body{
     padding:0px 5px;
 }
 .topright a{
-    padding:0 10px;
+    padding:0px 10px;
     font-size:14px;
     font-weight:bold;
 }
@@ -153,6 +204,16 @@ body{
 .topright a,ul a:visited{
     padding:0;
     color:black;
+}
+.topright .regs,.topright .log{
+    margin-right:20px;
+    font-size: 16px;
+    color:palevioletred;
+    /*visibility:visible;*/
+    display:none;
+}
+.topright .regs{
+    margin-left:20px;
 }
 /*主体区域*/
 #main{
@@ -173,20 +234,12 @@ body{
     height: 40px;
     font: 22px youyuan;
     line-height: 40px;
+    color: #000;
+    padding-left: 20px;
 }
 #main-left li:first-child{
     margin-top: 15px;
     background: #8ce141;
-}
-#main-left li p{
-    font: bold 22px heiti;
-    color: #fff;
-    padding-left: 20px;
-    padding-top: 9px;
-}
-#main-left .nav{
-    color: #000;
-    padding-left: 20px;
 }
 #main-left li:hover{
     background: #8ce141;
