--- a/static/css/write.css
+++ b/static/css/write.css
@@ -1,9 +1,13 @@
 /*清除默认样式*/
-body,h1,h2,h3,h4,h5,h6,ul,a,p{
+body,h1,h2,h3,h4,h5,h6,ul,ol,a,p{
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
+}
+body{
+    background:#e9c9bf;
+    padding:0px;
 }
 /*导航栏*/
 #nav{
@@ -12,88 +16,102 @@ body,h1,h2,h3,h4,h5,h6,ul,a,p{
 }
 /*1 头部样式*/
 #top{
-    width:1300px;
+    width:1500px;
     height:50px;
-    background:#8bc34a;
-    margin: 30px auto 0;
-    position:relative;
+    background:#FFFFFF;
+    margin:0 auto;
+    /*position:relative;*/
     font-size:12px;
+    position:fixed;
+    left:50%;
+    top:0px;
+    margin-left:-750px;
+    z-index: 100;
 }
 /*1.1 左侧logo*/
 #top .topleft{
-    width:250px;
+    width:500px;
     float:left;
-    /*margin-left:40px;*/
-    position:relative;
+    margin-left:40px;
 }
 .topleft img{
-    height:30px;
-    margin-left:20px;
+    float: left;
+    height:50px;
+    margin-left:0px;
+    margin-right:30px;
 }
 .topleft p{
-    font-size:18px;
+    float:left;
+    margin:0 50px;
+    font-size:32px;
     color:mediumpurple;
     font-weight: bold;
-    position:absolute;
-    bottom:-18px;
 }
 /*1.2 搜索框*/
 #top .topcenter{
     float: left;
-    margin-left: 145px;
+    margin-left: 350px;
     position:relative;
 }
-.topcenter input{
-    margin-top:5px;
-    height:36px;
+
+.topcenter .tags{
+    height:50px;
     width:300px;
-    border-radius:18px;
-    border:1px solid #04b5eb;
-    padding-left:10px;
-    font-size:14px;
-    border-right:none;
-}
-.topcenter input:focus{
-    outline:none;
-}
-.topcenter button{
-    position:absolute;
-    height:40px;
-    width:50px;
-    right:20px;
-    top:5px;
-    box-sizing:border-box;
-    z-index: 10;
-    border: 1px solid #04b5eb;
-    border-right:none;
-    padding:0 0 0 20px;
-    font-size: 14px;
-    font-weight: bold;
-    outline: none;
-    border-left: 1px solid #DDDDDD;
-}
-.topcenter div{
-    position:absolute;
-    height:40px;
-    width:50px;
-    right:-2px;
-    top:5px;
-    box-sizing:border-box;
-    background:#DDDDDD;
-    border-radius:20px;
-    border: 1px solid #04b5eb;
-}
-/*1.3 下拉菜单*/
-#index{
+    line-height: 50px;
+    text-align: center;
+    text-decoration: none;
     float: right;
-    font: 400 18px yahei;
-    color: #000;
-    margin-top: 12px;
-    margin-right: 65px;
+    padding-left:20px;
+    position:relative;
 }
-#index:hover{
-    color: blue;
+.topcenter .tags>a,.topcenter .tags>ul>a{
+    font-size: 18px;
+    color:-webkit-link;
+    float: left;
 }
+.topcenter .tags>a{
+    margin: 0 35px;
+}
+
+.type .type_list{
+    float: right;
+    position:absolute;
+    top:35px;
+    right:55px;
+    display:none;
+    background: #F3D5C4;
+}
+#top .tags ul{
+    position: absolute;
+    top:0px;
+    left:72px;
+    margin-left:20px;
+}
+#top .tags ol{
+    margin-top:-10px;
+    margin-left:20px;
+}
+#top .tags .last_a{
+    margin-left: 80px;
+}
+
+#top .tags li{
+    height:25px;
+    width:90px;
+    margin-top: 2px;
+    font-size:14px;
+    line-height: 25px;
+    border: 1px dotted grey;
+    background:greenyellow;
+}
+#top .tags ul ol{
+    display:none;
+}
+#top .tags ul:hover ol{
+    display: inline-block;
+}
+
+/*1.3 下拉菜单*/
 #top ul{
     float:right;
     margin-right:95px;
@@ -107,6 +125,8 @@ body,h1,h2,h3,h4,h5,h6,ul,a,p{
 #top .pic img{
     width:30px;
     height:30px;
+    display: inline-block;
+    /*visibility: visible;*/
 }
 .pic .list{
     margin-left:-60px;
@@ -136,7 +156,7 @@ body,h1,h2,h3,h4,h5,h6,ul,a,p{
     padding:0px 5px;
 }
 .topright a{
-    padding:0 10px;
+    padding:0px 10px;
     font-size:14px;
     font-weight:bold;
 }
@@ -151,6 +171,16 @@ body,h1,h2,h3,h4,h5,h6,ul,a,p{
 .topright a,ul a:visited{
     padding:0;
     color:black;
+}
+.topright .regs,.topright .log{
+    margin-right:20px;
+    font-size: 16px;
+    color:palevioletred;
+    /*visibility:visible;*/
+    display:none;
+}
+.topright .regs{
+    margin-left:20px;
 }
 /*顶部标题行*/
 #title{
