--- a/templates/index.html
+++ b/templates/index.html
@@ -12,33 +12,50 @@
     <!--1.顶部-->
     <div id="top">
         <div class="topleft">
-            <img class="item" src="../static/images/logo.png">
-            <p class="item">Bother Forum</p >
+            <img class="item" src="../static/images/456.png">
+            <p class="item">Bother Forum</p>
         </div>
-        <p id="index">首页</p>
         <div class="topcenter">
             <input type="text" name="search" placeholder="请输入要搜索的内容">
-            <button>搜索</button>
-            <div></div>
+            <button onclick="search()">搜索</button>
+            <div class="circle"></div>
+            <div class="tags">
+                <a href="/">首页</a>
+                <ul>
+                    <a href="" class="type" style="width: 120px;">文章列表</a>
+                    <ol class="type_list">
+                        <li><a href="">基础应用</a></li>
+                        <li><a href="">网络编程</a></li>
+                        <li><a href="">应用开发</a></li>
+                        <li><a href="">人工智能</a></li>
+                    </ol>
+                </ul>
+                <a href="" class="last_a">每日推荐</a>
+            </div>
         </div>
         <div class="topright">
             <img src="../static/images/message-icon.png" height="24" width="30"/>
             <p><a href="">消息</a></p>
             <img src="../static/images/write_blog.png" height="24" width="30"/>
             <p><a href="/write_blog">写博客</a></p>
-<!--            < a href="">登陆</ a>-->
-<!--            < a href="">注册</ a>-->
+            <a href="/login" class="regs">登陆</a>
+            <a href="/regist" class="log">注册</a>
         </div>
         <ul>
             <li class="pic">
                 <div class="img">
-                   <img src="../static/images/icon.png">
+                    {% if params.user.img %}
+                        <a href=""><img src="{{ params.user.img }}" alt=""></a>
+                    {% else %}
+                        <a href=""><img src="../static/images/icon.png" alt=""></a>
+                    {% endif %}
                 </div>
                 <ol class="list">
                     <li><a href="">我的关注</a></li>
                     <li><a href="">我的收藏</a></li>
                     <li><a href="">个人中心</a></li>
-                    <li><a href="">账号设置</a></li>
+                    <li><a href="/manage_blog">帖子管理</a></li>
+                    <li><a href="/login" id="logout">注销</a></li>
                 </ol>
             </li>
         </ul>
@@ -48,7 +65,7 @@
         <!--2.1主体左侧导航栏-->
         <div id="main-left">
             <ul>
-                <li><p>推荐</p></li>
+                <li class="nav">推荐</li>
                 <li class="nav">Python</li>
                 <li class="nav">网络编程</li>
                 <li class="nav">MySQL</li>
