--- a/templates/blog.html
+++ b/templates/blog.html
@@ -51,7 +51,8 @@
                     <li><a href="">我的关注</a></li>
                     <li><a href="">我的收藏</a></li>
                     <li><a href="">个人中心</a></li>
-                    <li><a href="">账号设置</a></li>
+                    <li><a href="/manage_blog">帖子管理</a></li>
+                    <li><a href="/login" id="logout">注销</a></li>
                 </ol>
             </li>
         </ul>
@@ -127,7 +128,7 @@
                     <span>大神</span>-->
                 </div>
                 <div class="text">
-                    {% for cont in params.blog.content.split('/r/n') %}
+                    {% for cont in params.content %}
                         <p>{{ cont }}</p>
                     {% endfor %}
                 </div>
@@ -162,7 +163,7 @@
                              alt="">
                         <a href="">{{ params.user.uname }}</a>
                         <span class="comment_show">{{ comm.text }}</span>
-                        <span>({{ comm.time }})</span>
+                        <span>({{ comm.time }}第{{ loop.index }}楼)</span>
                         <a href="" class="first_a">举报</a>
                         <a href="">回复</a>
                     </div>
