--- a/static/css/write.css
+++ b/static/css/write.css
@@ -9,11 +9,6 @@ body{
     background:#e9c9bf;
     padding:0px;
 }
-/*导航栏*/
-#nav{
-    background: #8bc34a;
-    height: 50px;
-}
 /*1 头部样式*/
 #top{
     width:1500px;
@@ -182,19 +177,9 @@ body{
 .topright .regs{
     margin-left:20px;
 }
-/*顶部标题行*/
-#title{
-    background: #dd8b84;
-    height: 100px;
-}
-#title h2{
-    margin-left: 310px;
-    height: 100px;
-    line-height: 100px;
-}
 /*主体*/
 #main{
-    width: 1300px;
+    width: 1500px;
     margin: 10px auto;
     background: #179999;
 }
@@ -204,7 +189,7 @@ body{
     width: 400px;
     height: 600px;
     background: #9e9e9e;
-
+    margin-top: 50px;
 }
 /*左侧上中下三个div统一设置格式*/
 #left div{
@@ -295,14 +280,15 @@ body{
 /*主体右侧*/
 #right{
     float: right;
-    width: 890px;
-    height: 700px;
+    width: 1090px;
+    height: 800px;
+    margin-top: 50px;
     background: #26A69A;
 }
 /*右侧显示区*/
 #right div{
-    margin: 30px auto 0;
-    width: 800px;
+    margin: 40px auto 0;
+    width: 1000px;
 }
 #line1{
     height: 40px;
@@ -314,7 +300,7 @@ body{
 }
 #line1 input{
     height: 40px;
-    width: 700px;
+    width: 900px;
     font-size: 18px;
     margin-left: 30px;
     border: 1px solid grey;
@@ -334,7 +320,7 @@ body{
 textarea{
     border: 0;
     padding: 0;
-    width: 700px;
+    width: 900px;
     font: 100 18px yahei;
     resize: none;
 }
@@ -344,11 +330,11 @@ textarea{
     font: 400 24px yahei;
     text-align: center;
     line-height: 40px;
-    margin: 20px 0 20px 720px;
+    margin: 20px 0 20px 920px;
 }
 /*底部*/
 #bottom{
-    width:1300px;
+    width:1500px;
     margin: 0 auto;
     padding: 30px 0 10px;
     clear: both;
