--- a/templates/write.html
+++ b/templates/write.html
@@ -8,60 +8,54 @@
 </head>
 <body>
 <!--顶部导航-->
-    <div id="nav">
-        <div id="top">
-        <div class="topleft">
-            <img class="item" src="../static/images/456.png">
-            <p class="item">Bother Forum</p>
-        </div>
-        <div class="topcenter">
+<div id="top">
+    <div class="topleft">
+        <img class="item" src="../static/images/456.png">
+        <p class="item">Bother Forum</p>
+    </div>
+    <div class="topcenter">
 
-            <div class="tags">
-                <a href="/">首页</a>
-                <ul>
-                    <a href="" class="type" style="width: 120px;">文章列表</a>
-                    <ol class="type_list">
-                        <li><a href="">基础应用</a></li>
-                        <li><a href="">网络编程</a></li>
-                        <li><a href="">应用开发</a></li>
-                        <li><a href="">人工智能</a></li>
-                    </ol>
-                </ul>
-                <a href="" class="last_a">每日推荐</a>
-            </div>
-        </div>
-        <div class="topright">
-            <img src="../static/images/message-icon.png" height="24" width="30"/>
-            <p><a href="">消息</a></p>
-            <img src="../static/images/write_blog.png" height="24" width="30"/>
-            <p><a href="/write_blog">写博客</a></p>
-            <a href="/login" class="regs">登陆</a>
-            <a href="/regist" class="log">注册</a>
-        </div>
-        <ul>
-            <li class="pic">
-                <div class="img">
-                    {% if params.user.img %}
-                        <a href=""><img src="{{ params.user.img }}" alt=""></a>
-                    {% else %}
-                        <a href=""><img src="../static/images/icon.png" alt=""></a>
-                    {% endif %}
-                </div>
-                <ol class="list">
-                    <li><a href="">我的关注</a></li>
-                    <li><a href="">我的收藏</a></li>
-                    <li><a href="">个人中心</a></li>
-                    <li><a href="/manage_blog">帖子管理</a></li>
-                    <li><a href="/login" id="logout">注销</a></li>
+        <div class="tags">
+            <a href="/">首页</a>
+            <ul>
+                <a href="" class="type" style="width: 120px;">文章列表</a>
+                <ol class="type_list">
+                    <li><a href="">基础应用</a></li>
+                    <li><a href="">网络编程</a></li>
+                    <li><a href="">应用开发</a></li>
+                    <li><a href="">人工智能</a></li>
                 </ol>
-            </li>
-        </ul>
+            </ul>
+            <a href="" class="last_a">每日推荐</a>
+        </div>
     </div>
+    <div class="topright">
+        <img src="../static/images/message-icon.png" height="24" width="30"/>
+        <p><a href="">消息</a></p>
+        <img src="../static/images/write_blog.png" height="24" width="30"/>
+        <p><a href="/write_blog">写博客</a></p>
+        <a href="/login" class="regs">登陆</a>
+        <a href="/regist" class="log">注册</a>
     </div>
-<!--标题行-->
-    <div id="title">
-        <h2>我的博客</h2>
-    </div>
+    <ul>
+        <li class="pic">
+            <div class="img">
+                {% if params.user.img %}
+                    <a href=""><img src="{{ params.user.img }}" alt=""></a>
+                {% else %}
+                    <a href=""><img src="../static/images/icon.png" alt=""></a>
+                {% endif %}
+            </div>
+            <ol class="list">
+                <li><a href="">我的关注</a></li>
+                <li><a href="">我的收藏</a></li>
+                <li><a href="">个人中心</a></li>
+                <li><a href="/manage_blog">帖子管理</a></li>
+                <li><a href="/login" id="logout">注销</a></li>
+            </ol>
+        </li>
+    </ul>
+</div>
 <!--主体-->
     <div id="main">
         <!--主体左侧-->
@@ -77,7 +71,7 @@
             <div id="left2">
                 <div>
                     <p>原创</p>
-                    <p>{{ params.blogs }}</p>
+                    <p>{{ params.user.blogs.all()|length }}</p>
                 </div>
                 <div>
                     <p>粉丝</p>
@@ -89,7 +83,7 @@
                 </div>
                 <div>
                     <p>评论</p>
-                    <p>{{ params.comments }}</p>
+                    <p>{{ params.user.comments.all()|length }}</p>
                 </div>
             </div>
             <div id="banner">
@@ -123,7 +117,7 @@
                     <span>添加图片</span><input type="file" name="img">
                 </div>-->
                 <div id="line4">
-                    <span>内容</span><textarea name="content" rows="18" maxlength="1000" required></textarea>
+                    <span>内容</span><textarea name="content" rows="21" maxlength="1000" required></textarea>
                 </div>
                 <input type="submit" value="发表" id="line5">
             </form>
