--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -14,12 +14,12 @@ body{
     width:1500px;
     height:50px;
     background:#FFFFFF;
-    margin:0 auto;
+    /*margin:0 auto;*/
     /*position:relative;*/
     font-size:12px;
     position:fixed;
     left:50%;
-    top:0px;
+    top:0;
     margin-left:-750px;
     z-index: 100;
 }
@@ -41,6 +41,22 @@ body{
     font-size:32px;
     color:mediumpurple;
     font-weight: bold;
+}
+/*1.2 搜索框*/
+#top .topcenter{
+    float: left;
+    margin-left: 350px;
+    position:relative;
+}
+.topcenter .tags{
+    height:50px;
+    width:300px;
+    line-height: 50px;
+    text-align: center;
+    text-decoration: none;
+    float: right;
+    padding-left:20px;
+    position:relative;
 }
 .topcenter .tags>a,.topcenter .tags>ul>a{
     font-size: 18px;
@@ -134,7 +150,7 @@ body{
     padding:0px 5px;
 }
 .topright a{
-    padding:0px 10px;
+    padding:0 10px;
     font-size:14px;
     font-weight:bold;
 }
@@ -199,7 +215,7 @@ body{
 }
 .up p{
     float:left;
-    height:20px;
+    height:30px;
     width:180px;
     margin:0 10px;
     text-align: center;
@@ -482,13 +498,22 @@ body{
     background:rgba(15,8,19,0.7)
 
 }
-
-
-
-
+/*底部*/
 #bottom{
-    width:1080px;
-    height:60px;
-    background:greenyellow;
-    margin:0 auto;
+    width:1500px;
+    margin: 0 auto;
+    padding: 30px 0 10px;
+    clear: both;
+    text-align: center;
+}
+#bottom>a{
+    text-decoration:underline;
+}
+#bottom>a,#bottom>span{
+    font-size:15px;
+    color:#555;
+    margin-right:10px;
+}
+#bottom>a:hover{
+    color: #000;
 }
