--- a/static/css/blog_manage.css
+++ b/static/css/blog_manage.css
@@ -356,3 +356,22 @@ body{
 #right span{
     margin: 2px 0;
 }
+/*底部*/
+#bottom{
+    width:1500px;
+    margin: 0 auto;
+    padding: 30px 0 10px;
+    clear: both;
+    text-align: center;
+}
+#bottom>a{
+    text-decoration:underline;
+}
+#bottom>a,#bottom>span{
+    font-size:15px;
+    color:#555;
+    margin-right:10px;
+}
+#bottom>a:hover{
+    color: #000;
+}
