--- a/static/css/index.css
+++ b/static/css/index.css
@@ -399,3 +399,23 @@ body{
 #cloud ul a:nth-child(5) { background: #EB6841 }
 #cloud ul a:last-child { background: #8A9B0F }
 #cloud ul a:hover { border-radius: 0; text-shadow: #000 1px 1px 1px }
+
+/*底部*/
+#bottom{
+    width:1500px;
+    margin: 0 auto;
+    padding: 30px 0 10px;
+    clear: both;
+    text-align: center;
+}
+#bottom>a{
+    text-decoration:underline;
+}
+#bottom>a,#bottom>span{
+    font-size:15px;
+    color:#555;
+    margin-right:10px;
+}
+#bottom>a:hover{
+    color: #000;
+}
