--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,12 @@
         <ul>
             <li class="pic">
                 <div class="img">
-                    {% if params.user.img %}
-                        <a href=""><img src="{{ params.user.img }}" alt=""></a>
+                    {% if user in params %}
+                        {% if params.user.img %}
+                            <a href=""><img src="{{ params.user.img }}" alt=""></a>
+                        {% else %}
+                            <a href=""><img src="../static/images/icon.png" alt=""></a>
+                        {% endif %}
                     {% else %}
                         <a href=""><img src="../static/images/icon.png" alt=""></a>
                     {% endif %}
@@ -53,9 +57,9 @@
                 <ol class="list">
                     <li><a href="">我的关注</a></li>
                     <li><a href="">我的收藏</a></li>
-                    <li><a href="">个人中心</a></li>
-                    <li><a href="/manage_blog">帖子管理</a></li>
-                    <li><a href="/login" id="logout">注销</a></li>
+                    <li><a href="{{ url_for('center') }}">个人中心</a></li>
+                    <li><a href="{{ url_for('manager_blog') }}">帖子管理</a></li>
+                    <li><a href="{{ url_for('logout') }}" id="logout">注销</a></li>
                 </ol>
             </li>
         </ul>
@@ -133,6 +137,13 @@
                 </ul>
             </div>
         </div>
+    </div>
+<!--底部页脚-->
+    <div id="bottom">
+        <a href="/about">关于brother forum</a>
+        <span id="copyright">Copyright &copy; 2019 </span>
+        <a href="/index">兄弟论坛</a>
+        <span id="version">版权所有 version1.0</span>
     </div>
 </body>
 </html>
