--- a/templates/write.html
+++ b/templates/write.html
@@ -49,9 +49,9 @@
             <ol class="list">
                 <li><a href="">我的关注</a></li>
                 <li><a href="">我的收藏</a></li>
-                <li><a href="">个人中心</a></li>
-                <li><a href="/manage_blog">帖子管理</a></li>
-                <li><a href="/login" id="logout">注销</a></li>
+                <li><a href="{{ url_for('center') }}">个人中心</a></li>
+                <li><a href="{{ url_for('manager_blog') }}">帖子管理</a></li>
+                <li><a href="{{ url_for('logout') }}" id="logout">注销</a></li>
             </ol>
         </li>
     </ul>
